--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http:
   webview_flutter:
+  bloc:
+  flutter_bloc: ^8.0.1
 
 dev_dependencies:
   flutter_test:
