--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,18 @@ dependencies:
   flutter_bloc: ^8.0.1
   lottie:
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash:
+  flutter_launcher_icons:
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/wn_icon.png"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -93,3 +102,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_native_splash:
+  image: assets/WN_icon.png
+  color: "#000000"
+  android_12:
+    image: assets/world.png
